Fixed responsiveness on iPhone5/se

--- a/css/stylesheet.css
+++ b/css/stylesheet.css
@@ -13,7 +13,7 @@
 1.2 nav
 1.3 section
 1.4 a (anchor tags)
-1.5 h3(::before & ::after)
+1.5 h1(::before & ::after)
 1.6 img(logo)
 
 
@@ -65,7 +65,8 @@ html {
   padding: 0px;
   overflow-x: hidden;
   font-family: "Cousine", monospace;
-  line-height: 180%;
+  /* line-height: 180%; */
+  line-height: 1.5rem;
   columns: #666666;
   text-align: center;
   font-weight: bolder;
@@ -101,12 +102,12 @@ nav ul li {
 
 nav a {
   color: #fff;
-  padding: 5px;
+  padding: 15px 8px;
 }
 nav a:hover {
   color: black;
   background-color: #fff;
-  padding: 5px;
+  padding: 15px 8px;
   border-radius: 5px;
 }
 
@@ -118,7 +119,7 @@ nav a:hover {
 
 section {
   overflow: auto;
-  padding: 50px 80px;
+  padding: 50px 10px;
 }
 
 /* 
@@ -138,20 +139,22 @@ a:hover {
 
 /* 
 ------------------------------------
-1.5 h3(::before & ::after)
+1.5 h1(::before & ::after)
 ------------------------------------ 
 */
 
-h3 {
-  line-height: 40px;
+h1 {
+  line-height: 2em;
+  font-family: Quicksand;
+  font-weight: bolder;
 }
-h3::before {
+h1::before {
   content: open-quote;
   font-size: 40px;
   font-family: Arial, Helvetica, sans-serif;
 }
 
-h3::after {
+h1::after {
   content: close-quote;
   font-size: 40px;
   font-family: Arial, Helvetica, sans-serif;
@@ -255,7 +258,7 @@ img {
 
 .vibepost {
   overflow: auto;
-  padding: 50px 80px;
+  padding: 50px 10px;
   background-color: #fff;
   color: rgb(53, 53, 53);
 }
@@ -268,14 +271,15 @@ img {
 
 .navbar {
   overflow: auto;
-  padding: 15px 0px;
+  padding: 10px 0px;
 }
 
 .navbar-links {
   display: inline-block;
   font-weight: bolder;
-  padding: 0 3px;
-  font-size: 16px;
+  padding: 15px 0;
+  font-size: 18px;
+  font-family: Arial, Helvetica, sans-serif;
 }
 
 /* 
@@ -334,7 +338,7 @@ img {
 }
 
 .card-image {
-  height: 150px;
+  height: 69px;
   width: 100%;
   object-fit: contain;
   border-top-right-radius: 10px;
@@ -344,8 +348,7 @@ img {
 
 .card-text {
   font-weight: bolder;
-  padding: 1.5em;
-  padding-top: 0;
+  padding: 0 1em;
 }
 
 .card-link {
@@ -354,7 +357,7 @@ img {
   text-decoration-line: underline;
 }
 
-.card-link h3 {
+.card-link h1 {
   margin-top: 0;
 }
 /* 
@@ -364,7 +367,7 @@ img {
 
 /* 
 ------------------------------------
-3.1.0 @media (min-width: 600px)
+3.1.0 @media (min-width: 768px)
 ------------------------------------ 
 */
 
@@ -389,13 +392,13 @@ img {
 
   .navbar {
     overflow: auto;
-    padding: 0px 0px;
+    padding: 15px 0px;
   }
   .navbar-links {
     display: inline-block;
     font-weight: bolder;
-    padding: 15px;
-    font-size: 20px;
+    padding: 15px 0px;
+    font-size: 25px;
   }
 
   .grid {
@@ -419,7 +422,36 @@ img {
 
   .card-text {
     font-weight: bolder;
-    padding: 1.5em;
-    padding-top: 0;
+    padding: 0 1.5em;
+  }
+
+  section {
+    overflow: auto;
+    padding: 100px 50px;
+    margin: 0 5rem;
+  }
+  .vibepost {
+    overflow: auto;
+    padding: 100px 50px;
+    margin: 0 5rem;
+  }
+  h1 {
+    line-height: 3rem;
+  }
+}
+
+@media (min-width: 900px) {
+  h1 {
+    line-height: 3rem;
+  }
+  section {
+    overflow: auto;
+    padding: 100px 50px;
+    margin: 0 10rem;
+  }
+  .vibepost {
+    overflow: auto;
+    padding: 100px 50px;
+    margin: 0 10rem;
   }
 }
